# accc

./: .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
accc/: __main__.py
accc/core/domain/converter/: argument_converter.py  argument_converter_response.py  import_converter.py  import_converter_response.py  input_converter.py
accc/core/domain/parser/: input_parser.py  input_parser_response.py  parser.py
accc/core/domain/product_code/: argument_part.py  argument_part_list.py  file_name.py  import_part.py  import_part_list.py  input_part.py  input_part_list.py  parameter_part.py  parameter_part_list.py  parsed_data.py  product_code.py  product_code_repository.py  product_code_service.py
accc/core/domain/test_code/: expectation.py  expectation_list.py  parsed_data.py  readable.py  readable_list.py  test_code.py  test_code_service.py
accc/core/usecase/product_code/: product_code_input_data.py  product_code_interactor.py  product_code_output_data.py  product_code_presenter.py  product_code_usecase.py
accc/core/usecase/test_code/: test_code_input_data.py  test_code_interactor.py  test_code_output_data.py  test_code_presenter.py  test_code_usecase.py
accc/infrastructure/file/: file_product_code_repository.py
accc/infrastructure/template/: product_code.j2
accc/interface/cli/product_code/: product_code_controller.py  product_code_presenter.py
accc/interface/cli/test_code/: test_code.j2  (+2 more)
script/: add_init_py.sh  reset_hide.sh  set_commit_template.sh  unset_commit_template.sh
tests/: test_main.py
(+25 files in other folders)
