[tool.poetry]
name = "accc"
version = "0.1.0"
description = "AtCoder Code Creation"
authors = ["Kawano Kenichi <bppk28@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]
pytest-cov = "^2.10.1"
isort = "^5.7.0"
black = "^20.8b1"
tox = "^3.21.0"
flake8 = "^3.8.4"
pep8-naming = "^0.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
