[tool.poetry]
name = "accc"
version = "1.0.0"
description = "AtCoder Code Creation"
authors = ["Kawano Kenichi <bppk28@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.3.2"
Jinja2 = "^2.11.2"
injector = "^0.18.4"
black = "^20.8b1"

[tool.poetry.dev-dependencies]
pytest-cov = "^2.10.1"
isort = "^5.7.0"
tox = "^3.21.0"
flake8 = "^3.8.4"
pep8-naming = "^0.11.1"

[tool.poetry.scripts]
accc = "accc.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
